tests/paczka1/small_fuzzy/13786341.err
Error in line 4: NCi4Ay S9q6 16,6
Error in line 1: pbelhglaT A358 85,7
Error in line 5: S936 S981 16,4
Error in line 2: NCi4Ay S981 48,7
